--- a/servant-generic-custommonad-streaming.cabal
+++ b/servant-generic-custommonad-streaming.cabal
@@ -17,6 +17,7 @@ executable servant-generic-custommonad-streaming
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
+  ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5
                      , servant
                      , servant-client
@@ -24,3 +25,4 @@ executable servant-generic-custommonad-streaming
                      , aeson
                      , http-client
                      , http-types
+                     , transformers
