Zero-len bytestring

--- a/servant-generic-custommonad-streaming.cabal
+++ b/servant-generic-custommonad-streaming.cabal
@@ -22,6 +22,7 @@ executable servant-generic-custommonad-streaming
                      , bytestring
                      , servant
                      , servant-client
+                     , servant-client-core
                      , servant-server
                      , aeson
                      , http-client
